--- a/styles/style.css
+++ b/styles/style.css
@@ -240,32 +240,27 @@
 }
 
 .person_name_feynman {
-  position: absolute;
   top: -30px;
   left: 319px;
 }
 
 .person_name_burbidge {
-  position: absolute;
-  bottom: 96px;
-  left: 125px;
+  top: 96px;
+  right: 125px;
 }
 .person_name_cannon {
-  position: absolute;
   bottom: 18px;
-  left: 216px;
+  right: 216px;
 }
 
 .person_name_mitchell {
-  position: absolute;
   bottom: 82px;
-  right: 82px;
+  left: 142px;
 }
 
 .person_name_tarter {
-  position: absolute;
   top: 79px;
-  right: 159px;
+  left: 159px;
 }
 
 .person__image {
